# LotteryLAB

./: .gitignore  README.md  alembic.ini
lotterylab/: .gitignore  LICENSE  Makefile  README.md  babel.cfg  pyproject.toml  requirements.txt
lotterylab/.ai/: ONBOARDING.md  lotto-analysis-prd.md  mathematical-methods.md  ui-redesign-spec.md
lotterylab/.ai/sprints/: BACKLOG.md  README.md  ROADMAP.md  _sprint_template.md  log.md
lotterylab/.ai/sprints/sprint000/: plan.md
lotterylab/.ai/sprints/sprint001/: plan.md
lotterylab/.ai/sprints/sprint002/: plan.md
lotterylab/.ai/sprints/sprint002.5/: plan.md
lotterylab/.ai/sprints/sprint003/: plan.md
lotterylab/.design/: homepage-v2.html  homepage-v3-themes.html  main-design-1.1.html  main-design.html  methodology-overview-v2.html  methodology-v2.html
lotterylab/.rules/: .cursorrules  01-coding-python.md  02-api-fastapi.md  03-frontend-jinja-htmx.md  04-database-sqlalchemy-alembic.md  05-data-ingestion.md  06-testing.md  07-security-performance.md  08-cursor-llm-collab.md  09-git-pr-process.md  10-branding-theming.md  README.md
lotterylab/alembic/: env.py
lotterylab/alembic/versions/: 34d63ce4d3a7_initial_schema.py  546f5ee9b9c0_add_game_provider_to_draws.py  cf7c749d01a2_add_indexes_on_draws_date_and_game_type.py
lotterylab/scripts/: cleanup_test_data.py  dup_report.py  generate_sets.py  import_txt.py  update_mbnet.py
lotterylab/src/: __init__.py
lotterylab/src/analysis/: frequency.py  patterns.py  randomness.py  visualizations.py
lotterylab/src/api/: main.py  schemas.py
lotterylab/src/data_acquisition/: __init__.py  data_validator.py  file_parser.py  scheduler.py
lotterylab/src/database/: models.py  session.py
lotterylab/src/repositories/: draws.py
lotterylab/src/services/: export.py  ingestion.py
lotterylab/src/utils/: config.py  i18n.py  logger.py  normalizer.py
lotterylab/static/css/: components.css  design-system.css  home.css  main.css  methodology-detail.css  methodology.css
lotterylab/static/js/: app.js  theme-toggle.js
lotterylab/templates/: home.html  index.html  methodology.html
lotterylab/templates/methodology/: autocorrelation.html  chi-square.html  entropy.html  kolmogorov-smirnov.html  monte-carlo.html  runs-test.html
lotterylab/templates/partials/: correlation.html  frequency.html  generator.html  patterns.html  randomness.html  recent_draws.html  stats.html  trends.html
lotterylab/tests/: conftest.py  test_api.py  test_data_validator.py  test_file_parser.py  test_frequency.py  test_ingestion.py  test_patterns.py  test_randomness.py  test_repositories.py  test_visualizations.py
